--- a/config/optional/field.field.node.os2web_news.field_os2web_news_article_date.yml
+++ b/config/optional/field.field.node.os2web_news.field_os2web_news_article_date.yml
@@ -4,6 +4,8 @@ dependencies:
   config:
     - field.storage.node.field_os2web_news_article_date
     - node.type.os2web_news
+  module:
+    - datetime
 id: node.os2web_news.field_os2web_news_article_date
 field_name: field_os2web_news_article_date
 entity_type: node
@@ -15,4 +17,4 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: timestamp
+field_type: datetime
