--- a/config/optional/views.view.os2web_news.yml
+++ b/config/optional/views.view.os2web_news.yml
@@ -4,8 +4,10 @@ dependencies:
   config:
     - core.entity_view_mode.node.list
     - core.entity_view_mode.node.teaser
+    - field.storage.node.field_os2web_news_article_date
     - node.type.os2web_news
   module:
+    - datetime
     - node
     - user
 id: os2web_news
@@ -195,6 +197,70 @@ display:
       use_more: false
       use_more_always: true
       use_more_text: more
+      title: ''
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_os2web_news_article_date'
+  os2web_news_archive:
+    display_plugin: block
+    id: os2web_news_archive
+    display_title: 'Archive links block'
+    position: 3
+    display_options:
+      display_extenders: {  }
+      defaults:
+        style: true
+        row: true
+        arguments: false
+        pager: false
+        title: false
+      arguments:
+        field_os2web_news_article_date_value_year:
+          id: field_os2web_news_article_date_value_year
+          table: node__field_os2web_news_article_date
+          field: field_os2web_news_article_date_value_year
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: summary
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: nyheder/arkiv
+            items_per_page: 25
+            count: false
+            override: false
+          summary:
+            sort_order: desc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          plugin_id: datetime_year
+      pager:
+        type: none
+        options:
+          offset: 0
+      display_description: ''
+      title: Arkiv
     cache_metadata:
       max-age: -1
       contexts:
@@ -305,3 +371,83 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: 'Archive page'
+    position: 4
+    display_options:
+      display_extenders: {  }
+      path: nyheder/arkiv
+      display_description: ''
+      arguments:
+        field_os2web_news_article_date_value_year:
+          id: field_os2web_news_article_date_value_year
+          table: node__field_os2web_news_article_date
+          field: field_os2web_news_article_date_value_year
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          plugin_id: datetime_year
+      defaults:
+        arguments: false
+        title: false
+        pager: false
+      title: 'Nyheder arkiv'
+      pager:
+        type: full
+        options:
+          items_per_page: 20
+          offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: '‹ Forrige'
+            next: 'Næste ›'
+            first: '« Første'
+            last: 'Sidste »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_os2web_news_article_date'
